# india-aqua

./: .agent-analysis.md  .agent.md  .env.example  .gitignore  .vercelignore  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  supabase_setup.sql  vercel.json
.github/workflows/: ci.yml  cron-scrape-mppcb.yml  cron-scrape.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_reading_wqi.py
api/: index.py  seed.db
dashboard/: app.py
data/ganga/: Bihar_BOD_Data_2024-2014.xlsx  Bihar_DO_data_2024-2014.xlsx  Bihar_FC_2024_CPCB.xlsx  Bihar_FC_2025_CPCB.xlsx  Bihar_FS_2024_CPCB.xlsx  Bihar_FS_2025_CPCB.xlsx  Bihar_PH_2024-2014.xlsx  Jharkhand_DO_2024-2018.xlsx  Jharkhand_FC_2025_CPCB.xlsx  Jharkhand_FS_2024_CPCB.xlsx  Jharkhand_FS_2025_CPCB.xlsx  Jharkhand_PH_2024_2018.xlsx  UKFS_Data_CPCB2024.xlsx  UP_FC_CPCB2025.xlsx  UP_FS_CPCB2024.xlsx  UP_FS_CPCB2025.xlsx  UP_PH_2024-2014.xlsx  Uttarakhand_BOD_Data2024-2014.xlsx  Uttarakhand_DO_2024_2014.xlsx  Uttarakhand_PH_2024_2014.xlsx  WB_FC_2025_CPCB.xlsx  WB_FS_2024_CPCB.xlsx  WB_FS_2025_CPCB.xlsx  WB_PH_2024-2014.xlsx  WestBengal_BOD_Data2024-2014.xlsx  West_Bengal_DO_2024_2014.xlsx  ganga_water_quality.csv
docker/: Dockerfile.api  Dockerfile.dashboard
frontend/: .env.local.example  package-lock.json  package.json
frontend/public/geo/: india-boundary.geojson
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/proxy/[...path]/: route.ts
frontend/src/app/deficiency/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/stations/[id]/: page.tsx
frontend/src/components/: CredentialsGate.tsx  NavBar.tsx  ParamInfoPanel.tsx  StationMap.tsx
frontend/src/lib/: api.ts  paramGuide.ts  status.ts  types.ts
frontend/src/utils/supabase/: middleware.ts  server.ts
sql/: schema.sql
src/ganga_aqua/: __init__.py  cli.py  config.py
src/ganga_aqua/agents/: __init__.py  analyzer.py  validator.py
src/ganga_aqua/api/: __init__.py  app.py  deps.py  routes.py  schemas.py
src/ganga_aqua/db/: __init__.py  models.py  session.py
src/ganga_aqua/scrapers/: __init__.py  base.py  ganga_sources.py
src/ganga_aqua/services/: __init__.py  auth.py  readings.py  scrape_pipeline.py  seed.py
src/india_aqua/: cli.py  config.py
src/india_aqua/agents/: validator.py
src/india_aqua/api/: routes.py
src/india_aqua/scrapers/: base.py  cpcb_realtime.py  cpcb_report.py  ganga_sources.py  mppcb_rivers.py
src/india_aqua/services/: __init__.py  cpcb_import.py  ganga_analysis.py  ganga_import.py  readings.py  scrape_pipeline.py
tests/: conftest.py  test_analyzer.py  test_api.py  test_cpcb_realtime.py  test_ganga_import.py  test_mppcb_rivers.py  test_pipeline.py  test_validator.py
