[project]
name = "india-aqua"
version = "0.1.0"
description = "Indian river water-quality SaaS: an autonomous scraping agent with LLM hallucination validation, FastAPI, and Streamlit BI."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "india-aqua" }]
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "openai>=1.40", # OpenAI-compatible client → NVIDIA NIM
    "playwright>=1.46",
    "streamlit>=1.38",
    "pandas>=2.2",
    "plotly>=5.23",
    "slowapi>=0.1.9", # rate limiting
    "python-multipart>=0.0.9",
    "typer>=0.12", # CLI
    "rich>=13.7",
    "httpx>=0.27",
    "tenacity>=8.5",
    "pypdf>=6.14.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
    "respx>=0.21",
]

[project.scripts]
india-aqua = "india_aqua.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/india_aqua"]

# ── Ruff ────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "dashboard"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "C4", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
# FastAPI's DI pattern requires calling Depends()/Query()/Header() in argument
# defaults. That's the framework's documented idiom, not a real bug.
"src/india_aqua/api/*.py" = ["B008"]
# str+Enum mixin used for SaasTier is intentional (SQLAlchemy Enum column
# compat). Leaving the StrEnum migration for a dedicated change.
"src/india_aqua/db/models.py" = ["UP042"]

# ── pytest ──────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"

# ── mypy ────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
exclude = ["alembic/versions"]
